<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/ilksayfamaku"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageVLogo"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txtUygulamaAdi1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/girisMaku" />

    <TextView
        android:id="@+id/txtUygulamaAdi2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="28sp"
        android:text="@string/girisHarfNotu" />

    <Button
        android:id="@+id/btnGiris"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:text="@string/butonBasla"
        app:backgroundTint="#3C55E3" />

</LinearLayout>